test for broken modal

--- a/styles.css
+++ b/styles.css
@@ -206,8 +206,8 @@ body {
 
 .nav-container .logo{
     letter-spacing: 3px;
-    text-decoration: none;
-    color: inherit;
+    text-decoration: none !important;
+    color: inherit !important;
     cursor: pointer;
 }
 
