--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     color: white;
     font-size: 3rem;
-    font-weight: medium;
+    font-weight: bold;
     text-align: center;
     letter-spacing: 0.2rem;
 }
@@ -453,7 +453,7 @@ footer {
     margin-left: 0.4rem;
 }
 
-footer {
+.footer-contact {
     background-color: #222;
     color: #999;
     text-align: center;
